syntax = "proto3";

package bridge;

message Request {
    uint32 request_id = 1;

    oneof subsystem {
        bool placeholder = 2;
    }
}

message Response {
    uint32 request_id = 1;
    bool request_status = 2;
    
    oneof subsystem {
        bool placeholder = 3;
    }
}

message Notification {
    oneof subsystem {
        bool placeholder = 1;
    }
}