syntax = "proto3";

package bridge.core;

message Request {
    uint32 request_id = 1;

    oneof request_type {
        bool get_device_info = 2;
        bool reset_settings = 3;
    }
}

message Response {
    oneof response_type {
        string data1 = 1;
        string data2 = 2;
    }
}